--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/preset-env": "^7.4.2",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2",
+    "jquery": "^3.3.1",
     "rollup": "^1.7.4",
-    "rollup-plugin-babel": "^4.3.2"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^4.0.1"
   }
 }
