--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2",
@@ -21,5 +22,9 @@
     "rollup": "^1.7.4",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-node-resolve": "^4.0.1"
+  },
+  "peerDependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1"
   }
 }
