--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Rollup HTML + JS + SASS into WP Toolset importable XML",
   "main": "index.js",
   "scripts": {
+    "build": "gulp build",
     "dev": "gulp dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,7 @@
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
+    "gulp-mustache": "^4.1.1",
     "gulp-sass": "^4.0.2",
     "jquery": "^3.3.1",
     "rollup": "^1.7.4",
