--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jquery": "^3.3.1",
     "rollup": "^1.7.4",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-node-resolve": "^4.0.1"
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-terser": "^4.0.4"
   },
   "peerDependencies": {
     "bootstrap": "^4.3.1",
