--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
+    "casual": "^1.6.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-mustache": "^4.1.1",
