Prep for netlify demo deploy

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "build": "gulp build",
+    "build-demo": "gulp buildDemo",
     "dev": "gulp dev"
   },
   "keywords": [
@@ -27,6 +28,7 @@
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
+    "faker": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-mustache": "^4.1.1",
@@ -39,8 +41,5 @@
   "peerDependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1"
-  },
-  "dependencies": {
-    "faker": "^4.1.0"
   }
 }
